...
            registerUser(kmUser)
        }

    @IBAction func loginAsVisitor(_: Any) {
        resignFields()
        
        if ProcessInfo.processInfo.environment["isFaqUIFromDashboardTestEnabled"] != nil {
            let applicationId = (UIApplication.shared.delegate as! AppDelegate).appId
            setupApplicationKey(applicationId)
            let conversation = KMConversation(userId: Kommunicate.randomId())
            Kommunicate.createConversationWithPreChat(appID: applicationId, conversation: conversation, viewController: self) { error in
                if error != nil {
                    return
                }
            }
        } else if ProcessInfo.processInfo.environment["isFaqUITestEnabled"] != nil {
            let preChatVC = KMPreChatFormViewController(configuration: Kommunicate.defaultConfiguration)
            preChatVC.delegate = self // Set the delegate to self to receive callbacks
            preChatVC.preChatConfiguration.optionsToShow = [.email, .name, .phoneNumber] // Configure options to be visible in pre-chat
            preChatVC.preChatConfiguration.mandatoryOptions = [.email, .name, .phoneNumber] // Configure mandatory options
            self.present(preChatVC, animated: false, completion: nil) // Present the pre-chat view
        } else {
...
