...
extension KMStarRattingViewController: Localizable {
    enum LocalizedText {
        private static let filename = Kommunicate.defaultConfiguration.localizedStringFileName

        static let title = localizedString(forKey: "FiveStarConversationRatingTitle", fileName: filename)
        static let commentPlaceholder = localizedString(forKey: "FiveStarConversationRatingCommentsPlaceholder", fileName: filename)
        static let submit = localizedString(forKey: "FiveStarConversationRatingSubmitButtonTitle", fileName: filename)
        static let restartConversation = localizedString(forKey: "ConversationClosedRestartConversation", fileName: filename)
        static let commentSectionTitle = localizedString(forKey: "FiveStarConversationCommentTitle", fileName: filename)
    }
}

