...
                                                                </constraints>
                                                                <state key="normal" title="Login as Visitor">
                                                                    <color key="titleColor" systemColor="darkTextColor"/>
                                                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                </state>
                                                                <connections>
                                                                    <action selector="loginAsVisitor:" destination="Pbo-Hd-r2L" eventType="touchUpInside" id="HFZ-Rc-zeB"/>
                                                                </connections>
                                                            </button>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="If you Login as a visitor then you don't have to pass a user Id and password. You will be logged in with a random User Id" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdj
                                                                <rect key="frame" x="0.0" y="46" width="345" height="29"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
